Internet explorer compatibility fixes
Fixed stretched images on internet explorer

--- a/css/mohanbs-stylesheet.css
+++ b/css/mohanbs-stylesheet.css
@@ -272,8 +272,8 @@ hr {
 }
 
 .card-img{
-    width: 100%;
-    height: auto;
+    width:100%;
+    height: 10rem;
     top: 0;
 }
 
